--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<h1>Pagina en proceso de creacion</h1>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Mi Sitio Web</title>
+</head>
+<body>
+    <h1>¡Bienvenido a mi sitio web en GitHub Pages!</h1>
+    <p>Este es un sitio gratuito y sin marcas de agua.</p>
+</body>
+</html>
